# Anubis

./: .gitignore  README.md  pyproject.toml
anubis/: __init__.py  __main__.py
