[project]
name = "anubis"
version = "0.0.6"
authors = [
  { name="Daniel", email="rozario@disroot.org" },
]
description = "This script judge proxy instead of soul. "
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["httpx","rich-click","validators"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU 3 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TheCrowClub/Anubis"
"Bug Tracker" = "https://github.com/TheCrowClub/Anubis/issues"

[project.scripts]
anubis = 'anubis.__main__:main'

[tool.black]
line-length = 79
